# achilles

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  HANDOFF.md  Makefile  README.md  SECURITY.md  TRAINING_ROADMAP.md  achilles_package.d.ts  automation_manifest.yaml  install.ps1  pyproject.toml  setup.ps1  setup.sh  update.ps1  update.sh
.claude/: settings.json
.claude/agents/: hypothesis-evaluator.md  ingestion-quality-scorer.md  lora-adapter-registry-manager.md  lora-arastirma.md  lora-control-orchestrator.md  lora-curriculum-classifier.md  lora-dataset-auditor.md  lora-domain-verifier.md  lora-evaluation-reviewer.md  lora-logic-philosophy-reviewer.md  lora-math-physics-statistics-verifier.md  lora-safety-secret-scanner.md  lora-trainer-configurator.md  makale-arastirma.md  model-data-registry.md  rlm-answer.md  rlm-integration-agent.md  rlm-security-reviewer.md  scientific-tool-runtime.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: claude_task.yml
.github/workflows/: ci.yml  claude-code-task.yml  nightly-automation-audit.yml
.specify/memory/: constitution.md
app/: __init__.py  main.py
app/agents/: local_training_dryrun.py  local_training_handoff.py  local_training_orchestrator.py  local_training_postcheck.py  local_training_request.py
app/brain/: __init__.py  answer_quality.py  entity_relation_extractor.py  knowledge_card_builder.py  local_llm.py  mlx_llm.py  model_router.py  multi_query_retriever.py  paper_summarizer.py  prompt_loader.py  query_expander.py  rag_answerer.py  self_refining_rag.py  synthetic_qa_builder.py  training_data_builder.py
app/config/: __init__.py  settings.py
app/evals/: __init__.py  answer_eval.py  eval_runner.py  golden_dataset.py  golden_generator.py  metrics.py  rag_ragas_offline.py  regression_runner.py  retrieval_eval.py  trading_hypothesis_evaluator.py
app/feedback/: __init__.py  echo.py  store.py
app/ingestion/: arxiv_fetcher.py  chunker.py  clean_text_scorer.py  hybrid_chunker.py  late_chunker.py  metadata_extractor.py  paper_loader.py  pdf_parser.py  quality_scorer.py
app/learning/: __init__.py  mastery_scorer.py  paper_inspector.py  paper_mastery_agent.py  question_generator.py  rag_exam_runner.py  report_generator.py  status_manager.py
app/lora/: __init__.py  adapter_registry.py  auto_pipeline.py  card_curation.py  control_plane.py  curriculum.py  dataset_builder.py  dataset_splitter.py  domain_classifier.py  gates.py  math_verifier.py  peft_llm_shim.py  quality_filter.py  safety_scanner.py
app/memory/: bm25_corpus.py  bm25_index.py  chroma_store.py  contextual_chunker.py  cross_encoder_reranker.py  embedding_service.py  ensemble_reranker.py  flashrank_reranker.py  graph_corpus.py  graph_retriever.py  hierarchical_retriever.py  hybrid_retriever.py  knowledge_graph.py  mastery_store.py  paper_indexer.py  query_router.py  rank_fusion.py  reranker.py  reranking_retriever.py  retrieval_service.py  sqlite_store.py
app/monitoring/: __init__.py  store.py  (+1 more)
docs/: AGENT_RUNTIME_OBSERVER.md  AUTOMATION_ARCHITECTURE.md  EGITIM_PROTOKOLU.md  GUNCELLEME_KILAVUZU.md  LOCAL_CLAUDE_OPERATOR.md  LOCAL_TRAINING_DRYRUN_PIPELINE.md  LOCAL_TRAINING_HANDOFF.md  LOCAL_TRAINING_ORCHESTRATOR.md  LOCAL_TRAINING_POSTCHECK.md  LOCAL_TRAINING_REQUEST_FLOW.md  PHASE4B_DRYRUN.md  PHASE4C_ACTIVATION.md  PHASE4_GITHUB_AUTOMATION.md  PROTOKOL_ASAMALI_EGITIM.md  PROTOKOL_BACKTEST.md  PROTOKOL_BULUT_EGITIM.md  PROTOKOL_LORA_ARASTIRMA.md  PROTOKOL_MAKALE_ARASTIRMA.md  PROTOKOL_MCP.md  PROTOKOL_RAG_GUNCEL_ARASTIRMA.md  PROTOKOL_RAG_LORA_ZINCIR.md  PROTOKOL_VERI_URETIM.md  RAG_EGITIM_YENIDEN_TASARIM.md  RAG_LORA_ENTEGRASYON.md  ROADMAP_MOTOR_BAGLAMA.md  SCOPE_ISOLATION.md  SPEC_KIT_DEGERLENDIRME.md  rlm_alexzhang_integration.md  rlm_rag_architecture.md  rlm_runtime_modes.md  rlm_security_model.md
evals/: discipline_core.jsonl  overfit_awareness.jsonl  risk_management.jsonl
mcp_server/: achilles_mcp.py  allowlist.py
notebooks/: KAGGLE_EGITIM_ADIM_ADIM.md  Modelfile  achilles_lora_stage2.ipynb
reports/: handoff_hiz_kalite_makale_2026-06-20.md  handoff_web_canlilik_2026-06-20.md  rag_deep_research_roadmap.md  rag_loop_otonom_durum_2026-06-18.md  rag_retrieval_ab_findings.md
scripts/: README.md  achilles-autostart.vbs  achilles-loop-autostart.vbs  assemble_sft.py  auto-chain.sh  bootstrap.sh  build_golden_eval.py  check_protected_paths.py  continuous-learning.sh  enrichment-topics.txt  gen_egitim_pdf.py  install-autostart.sh  install-bug-scan-task.ps1  install-literature-scout-task.ps1  literature-scout.ps1  mac-loop.sh  open-pr.ps1  open-pr.sh  phase1_research.ps1  purge_empty_cards.py  rag-research-cycle.md  rag-research-loop.ps1  rag-research-scan.md  rag_ab_crossenc.py  rag_ab_multi.py  rag_keyword_eval.py  rag_retrieval_ab.py  run_pipeline.sh  setup-pr-automation.sh  start-loop.ps1  start-server.ps1  start-train.ps1  sync-mcp.sh  synth_qa_chain.ps1  train-loop.ps1  verify-install.ps1  verify-install.sh  weekly-bug-scan.ps1
storage/: auto_lora_state.json
tasks/: local_dry_run_task.md
tests/: conftest.py  test_abstention_policy.py  test_adapter_eval_degenerate.py  test_adapter_eval_verdict.py  test_agent_cli.py  test_agent_dashboard_static.py  test_agent_event_prune.py  test_agent_graph.py  test_agent_map_frontend.py  test_agent_phase2_cli.py  test_agent_registry.py  test_agent_tracker.py  test_ai_brain_routes.py  test_answer_quality.py  test_approvals.py  test_auto_pipeline_eval.py  test_auto_researcher.py  test_backtester.py  test_bm25_index.py  test_card_builder_source_guard.py  test_card_curation.py  test_chain.py  test_chunker.py  test_citation_verifier.py  test_clean_text_scorer.py  test_cli_exams.py  test_cloud_notebook.py  test_comprehension_rescore.py  test_context_sufficiency.py  test_contextual_embed.py  test_contradiction_detector.py  test_cross_encoder_reranker.py  test_cross_paper_seed.py  test_cross_paper_synthesis_guard.py  test_curriculum.py  test_dataset_autoreg.py  test_dataset_builder.py  test_dataset_quality.py  test_deflated_sharpe.py  test_detached_launch_profile.py  (+138 more)
(+195 files in other folders)
