[project]
name = "achilles-trader-ai"
version = "0.1.0"
description = "Local-first AI trading research system (RAG + knowledge cards + LoRA + backtest) for macOS Apple Silicon."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Achilles Trader AI" }]
keywords = ["trading", "research", "rag", "lora", "backtest", "local-first"]

dependencies = [
    # data
    "pandas>=2.2",
    "numpy>=1.26",
    "polars>=1.0",
    "pyarrow>=16.0",
    # config / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # storage
    "sqlalchemy>=2.0",
    "chromadb>=0.5",
    # pdf
    "pymupdf>=1.24",
    "pypdf>=4.2",
    "pdfplumber>=0.11",
    # indicators / backtest
    "ta>=0.11",
    "backtesting>=0.3.3",
    # cli / ux
    "typer>=0.12",
    "rich>=13.7",
    # io / web (paper sourcing later)
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
]

[project.optional-dependencies]
# Heavier / platform-specific extras. mlx-lm only installs on Apple Silicon.
train = ["mlx-lm>=0.16; platform_system == 'Darwin' and platform_machine == 'arm64'"]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-requests",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.scripts]
achilles = "app.main:app"
achilles-web = "app.web.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "B008",   # typer uses function-call defaults
    "RUF001", # ambiguous unicode (Türkçe karakterler: ı, ş, vb. kasıtlı)
    "RUF002", # ambiguous unicode in docstrings (Türkçe)
    "RUF003", # ambiguous unicode in comments (Türkçe)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "ollama: tests that require a running local Ollama server",
    "slow: slow tests",
]
