[project]
name = "achilles-trader-ai"
version = "0.1.0"
description = "Local-first AI trading research system (RAG + knowledge cards + LoRA + backtest) for macOS Apple Silicon."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Achilles Trader AI" }]
keywords = ["trading", "research", "rag", "lora", "backtest", "local-first"]

dependencies = [
    # data
    "pandas>=2.2",
    "numpy>=1.26",
    "polars>=1.0",
    "pyarrow>=16.0",
    # config / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # storage
    "sqlalchemy>=2.0",
    "chromadb>=0.5",
    # pdf
    "pymupdf>=1.24",
    "pypdf>=4.2",
    "pdfplumber>=0.11",
    # indicators / backtest
    "ta>=0.11",
    "backtesting>=0.3.3",
    # cli / ux
    "typer>=0.12",
    "rich>=13.7",
    # llm cloud providers
    "anthropic>=0.40",
    "google-genai>=1.0",
    # io / web (paper sourcing)
    "requests>=2.32",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    # web server — achilles-web entry point (tüm platformlarda gerekli)
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    # system profiling (model recommendation)
    "psutil>=6.0",
]

[project.optional-dependencies]
# Heavier / platform-specific extras. mlx-lm only installs on Apple Silicon.
train = ["mlx-lm>=0.16; platform_system == 'Darwin' and platform_machine == 'arm64'"]
# Windows/Linux CPU veya CUDA ile LoRA egitimi icin: uv pip install -e ".[train-cpu]"
train-cpu = ["torch>=2.2", "transformers>=4.40", "peft>=0.10", "datasets>=2.19", "accelerate>=0.29"]
# Egitim dokumanlarini PDF e cevirmek icin: uv pip install -e ".[docs]" (scripts/gen_egitim_pdf.py)
docs = ["markdown-pdf>=1.13"]
# OPSIYONEL: alexzhang13/rlm recursive reasoning motoru. Kurulu degilse Achilles native
# RLM ile tam calisir. Acmak icin: uv sync --extra rlm  (veya uv pip install -e ".[rlm]")
rlm = ["rlms>=0.1.2"]
# OPSIYONEL: mcp_server/achilles_mcp.py (FastMCP proxy) icin. Bu extra kurulmadan
# `python mcp_server/achilles_mcp.py` ModuleNotFoundError ile duser.
# Kuran taraf: scripts/sync-mcp.sh
mcp = ["fastmcp>=2.0"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-requests",
]

[project.scripts]
achilles = "app.main:app"
achilles-web = "app.web.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]
# Colab/Kaggle notebook'ları ruff'tan dışla: ortam-sağlamalı globaller (files,
# get_ipython) F821 yanlış-pozitifi üretir ve format cell yapısını bozar.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "B008",   # typer uses function-call defaults
    "RUF001", # ambiguous unicode (Türkçe karakterler: ı, ş, vb. kasıtlı)
    "RUF002", # ambiguous unicode in docstrings (Türkçe)
    "RUF003", # ambiguous unicode in comments (Türkçe)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers -m 'not ollama and not slow'"
markers = [
    "ollama: tests that require a running local Ollama server",
    "slow: slow tests",
]
